--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,25 +44,20 @@
       <div class="row"> <!-- main header - logo + napis -->
 
         <div class="row">
-          <div class="span2">
+          <div class="span2"> <!-- Logo -->
               <%= link_to root_path, :class => 'vzs-main-logo-container' do %>
                 <%= image_tag("logo_vzs.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
               <% end %>
           </div>
-          <div class="span10">
+          <div class="span10"> <!-- Nadpis -->
             <%= render 'layouts/title' %>
           </div>
         </div>
 
 
         <div class="row vzs-main-content">
-
           <div class="row">
-            <div class="span12"> <br /></div>
-          </div>
-
-          <div class="row">
-            <div class="span3" id="vzs-left-menu">
+            <div class="span3" id="vzs-left-menu"> <!-- Menu -->
               <div class="well sidebar-nav">
                  <%= render 'layouts/menu' %>
               </div><!--/.well -->
@@ -77,24 +72,22 @@
                   </div>
                 <% end %>
 
-              <!--<% flash.each do |name, msg| %>-->
-                <!--<%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>-->
-              <!--<% end %>-->
+              <% flash.each do |name, msg| %>
+                <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert alert-#{name == :notice ? 'success' : 'error'} " %>
+              <% end %>
 
-              <div class="row well" id="vzs-page-content">
+              <div class="row" id="vzs-page-content">
                 <%= yield %>
               </div>
             </div>
           </div>
-
-        </div><!--/row-->
+        </div><!--/row vzs-main-content-->
       </div><!-- main header - logo + napis -->
 
       <hr />
       <footer>
       <p>&copy; FriendlySystems.cz 2012</p>
       </footer>
-
     </div> <!-- /container -->
 
     <!-- Le javascript
