upraveni vypisu galerii

--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -1,4 +1,4 @@
-<div id="carousel" class="es-carousel-wrapper">
+<div id="carousel-#{gallery.id}" class="es-carousel-wrapper">
     <div class="es-carousel">
         <ul>
           <% gallery.photos.each do |photo| %>
