--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,12 +10,12 @@
   <div class="row">
     <% group.each do |article| %>
       <div class="span3 well">
-        <h2><%= link_to article.title, article %>
-
+        <h2>
           <%= link_to article_path(article, :anchor => 'comments'),
-            :class => "badge badge-info" do
-            %><%=article.comments.count%> <i class="icon-comment"></i><%
-            end %>
+            :class => "badge badge-info pull-right" do %>
+            <%=article.comments.count%> <i class="icon-comment"></i>
+          <% end %>
+          <%= link_to article.title, article %>
         </h2>
 
         <%= render 'articles/meta_info', :article => article %>
