--- a/app/views/layouts/_title.html.erb
+++ b/app/views/layouts/_title.html.erb
@@ -1,11 +1,7 @@
-            <% if content_for? :title %>
               <div class="page-header">
                 <h1>
-                  <%= yield(:title) %>
-                  <% if content_for? :title_sub %>
+                  Vodní záchranná služba ČČK
                   <br />
-                    <small><%= yield(:title_sub) %></small>
-                  <% end %>
+                    <small>MS Třebíč</small>
                 </h1>
               </div>
-            <% end %>
