--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,9 @@
     <div class="container">
       <div class="row"> <!-- main header - logo + napis -->
 
-        <div class="row">
+        <div class="row vzs-header">
           <div class="span2"> <!-- Logo -->
+            <br />
               <%= link_to root_path, :class => 'vzs-main-logo-container' do %>
                 <%= image_tag("logo_vzs.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
               <% end %>
