--- a/app/views/layouts/_title.html.erb
+++ b/app/views/layouts/_title.html.erb
@@ -1,7 +1,7 @@
               <div class="page-header">
-                <h1>
+                <h2 class="vzs-main-title-text">
                   Vodní záchranná služba ČČK
                   <br />
-                    <small>MS Třebíč</small>
-                </h1>
+                    MS Třebíč
+                </h2>
               </div>
