--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,6 @@
 @import "twitter/bootstrap/bootstrap";
 body { 
-	padding-top: 60px;
+	padding-top: 40px;
 }
 
 /*@import "twitter/bootstrap/responsive";*/
@@ -30,6 +30,9 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+ @linkColor: #2CACE2;
+
+@navbarHeight: 30px;
 
 .hero-unit h1 {
   font-size: 40px;
