--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,15 +42,8 @@
 
     <div class="container">
       <div class="row"> <!-- main header - logo + napis -->
-
         <div class="row vzs-header">
-          <div class="span2"> <!-- Logo -->
-            <br />
-              <%= link_to root_path, :class => 'vzs-main-logo-container' do %>
-                <%= image_tag("logo_vzs.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
-              <% end %>
-          </div>
-          <div class="span10"> <!-- Nadpis -->
+          <div class="span8 offset2" id="vzs-main-title"> <!-- Nadpis -->
             <%= render 'layouts/title' %>
           </div>
         </div>
@@ -59,12 +52,15 @@
         <div class="row vzs-main-content">
           <div class="row">
             <div class="span3" id="vzs-left-menu"> <!-- Menu -->
-              <div class="well sidebar-nav">
+              <div class="sidebar-nav">
+                  <%= link_to root_path, :class => 'vzs-main-logo-container' do %>
+                    <%= image_tag("znakVZS_150x150.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
+                  <% end %>
                  <%= render 'layouts/menu' %>
               </div><!--/.well -->
             </div><!--/span-->
 
-            <div class="span8 offset1" id="vzs-main-content">
+            <div class="span9"  id="vzs-main-content">
               <% if content_for? :context_menu %>
               <div class="row">
                   <div class="pull-right">
