--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -37,9 +37,9 @@
 body {
   //background:transparent no-repeat 100% 10px;
   background:transparent;
-  background-image:image-url("horni_lista_s_prechodem.png"), image-url("prechod.gif");
+  background-image:image-url("horni-lista-618x434.gif"), image-url("prechod-min.gif");
   background-repeat:no-repeat, repeat-x;
-  background-position: 100% 15px, 100% 100px;
+  background-position: 100% 15px, 100% 50px;
 }
 
 #vzs-page-content {}
