--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,16 @@
                     <%= image_tag("znakVZS_150x150.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
                   <% end %>
                  <%= render 'layouts/menu' %>
+
+                 <table class="table-condensed">
+                 <tr><td colspan="2"><h6>Plavání mládež:</h6></td></tr>
+                  <tr><td>Pondělí</td><td>16:00 - 17:00</td></tr>
+                  <tr><td>Pátek</td><td>18:00 - 19:00</td></tr>
+                  <tr><td colspan="2"><h6>Plavání dospělí:</h6></td></tr>
+                  <tr><td>Pátek</td><td>19:00 - 20:00</td></tr>
+                  <tr><td colspan="2"><h6>Lezecký výcvik:</h6></td></tr>
+                  <tr><td>Lichá středa</td><td>18:00 - 19:00</td></tr>
+              </table>
               </div><!--/.well -->
             </div><!--/span-->
 
