--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,15 +59,17 @@
                   <% end %>
                  <%= render 'layouts/menu' %>
 
-                 <table class="table-condensed">
-                 <tr><td colspan="2"><h6>Plavání mládež:</h6></td></tr>
-                  <tr><td>Pondělí</td><td>16:00 - 17:00</td></tr>
-                  <tr><td>Pátek</td><td>18:00 - 19:00</td></tr>
-                  <tr><td colspan="2"><h6>Plavání dospělí:</h6></td></tr>
-                  <tr><td>Pátek</td><td>19:00 - 20:00</td></tr>
-                  <tr><td colspan="2"><h6>Lezecký výcvik:</h6></td></tr>
-                  <tr><td>Lichá středa</td><td>18:00 - 19:00</td></tr>
-              </table>
+                 <a href="pages/21-treninky.html">
+                 <ul class="unstyled well" style="background:white">
+                   <h5> Plavání mládež </h5>
+                   <li>Pondělí <span class="pull-right">16:00 - 17:00</span></li>
+                   <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
+                   <h5> Plavání dospělí </h5>
+                   <li>Pátek <span class="pull-right">19:00 - 20:00</span></li>
+                   <h5> Lezecký výcvik </h5>
+                   <li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>
+                 </ul>
+               </a>
               </div><!--/.well -->
             </div><!--/span-->
 
