--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
         <div class="span12">
           <%= simple_format @article.content,{},  :sanitize => false %>
         </div>
-        <% unless @article.gallery.nil? %>
+        <% if @article.gallery %>
           <div class="span12">
             <ul class="thumbnails">
               <%= render 'galleries/gallery', :gallery => @article.gallery %>
