--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
                  <%= render 'layouts/menu' %>
 
                  <a href="pages/21-treninky.html">
-                 <ul class="unstyled well" style="background:white">
+                   <ul class="unstyled well well-white">
                    <h5> Plavání mládež </h5>
                    <li>Pondělí <span class="pull-right">16:00 - 17:00</span></li>
                    <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
