--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,18 +1,17 @@
 <% title 'Vodní záchranná služba ČČK', 'MS Třebíč' %>
 
 <%if @articles.first %>
-  <div class="hero-unit">
+  <div class="well">
     <% article = @articles.first %>
     <h1><%=link_to article.try(:title), article %></h1>
     <p>
       <%= sanitize article.try(:content).try(:truncate, 300), :tags => '' %>
+    </p>
       <% if article.gallery.try(:photos).try(:many?) %>
-          <%= render article.gallery %>
-      <% end %>
-    </p>
     <p>
-      <a href="<%= article_path(article) %>" class="btn btn-primary btn-large">Více <i class="icon-chevron-right"></i></a>
+        <%= render article.gallery %>
     </p>
+      <% end %>
   </div>
 <% end %>
 
