--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -10,6 +10,7 @@
 <div class="row-fluid vzs-page">
 
   <div class="row-fluid vzs-page-content">
+    <h1><%= yield :title %> </h1>
     <%= raw @page.content %>
   </div>
 
