prevod treninku do samostat. partialu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,18 +58,8 @@
                     <%= image_tag("znakVZS_150x150.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
                   <% end %>
                  <%= render 'layouts/menu' %>
+                 <%= render 'layouts/treninky' %>
 
-                 <a href="pages/21-treninky.html">
-                   <ul class="unstyled well well-white">
-                   <h5> Plavání mládež </h5>
-                   <li>Pondělí <span class="pull-right">16:00 - 17:00</span></li>
-                   <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
-                   <h5> Plavání dospělí </h5>
-                   <li>Pátek <span class="pull-right">19:00 - 20:00</span></li>
-                   <h5> Lezecký výcvik </h5>
-                   <li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>
-                 </ul>
-               </a>
               </div><!--/.well -->
             </div><!--/span-->
 
