pridan jQuery-UI gem a jQuery.Form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= require_tree .
 */
 
+//*= require jquery.ui.all
 //*= require formtastic
 //*= require formtastic_changes
 //*= require formtastic-bootstrap
