--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -18,7 +18,7 @@
 }
 
 .vzs-main-title-text {
-  text-shadow: 0px 3px 3px #FFF;
+  text-shadow: 0px 2px 5px #FFF;
   text-outline: 3px;
 }
 
@@ -36,7 +36,7 @@
 body {
   //background:transparent no-repeat 100% 10px;
   background:transparent;
-  background-image:image-url("horni-lista-618x434.gif"), image-url("prechod-min.gif");
+  background-image:image-url("horni-lista-654x384.png"), image-url("prechod-min.gif");
   background-repeat:no-repeat, repeat-x;
   background-position: 100% 25px, 100% 50px;
 }
