Pridani loga CEZ na hlavi stranu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,11 @@
                    <li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>
                  </ul>
                </a>
+
+               <%= link_to 'www.cez.cz' do %>
+                <%= image_tag("logo-skupina-cez.jpg", :class => "img") %>
+              <% end %>
+                
               </div><!--/.well -->
             </div><!--/span-->
 
