Spinava oprava nekonecne smycky v JS
Pravdepodobne se tadle smycka volala i na strankach kde se zadne inputy nepridavaly - tudiz nekonecna smycka.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
                     <%= image_tag("znakVZS_150x150.gif", :size => "150x150", :class => "vzs-main-logo img-circle") %>
                   <% end %>
                  <%= render 'layouts/menu' %>
-                 <%= render 'layouts/treinky' %>
+                 <%= render 'layouts/treninky' %>
 
 
                <%= link_to 'www.cez.cz' do %>
