--- a/app/views/layouts/_title.html.erb
+++ b/app/views/layouts/_title.html.erb
@@ -1,5 +1,5 @@
-              <div class="page-header">
-                <h2 class="vzs-main-title-text">
+              <div class="page-header vcard">
+                <h2 class="vzs-main-title-text fn org">
                   Vodní záchranná služba ČČK
                   <br />
                     MS Třebíč
