pridani popisu pro google

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="MS VZS ČČK Třebíč je občanské sdružení jehož cílem je zajišťovat bezpečnost u vody, vodácké akce a jiné sportovní akce. Dále zajišťujeme přednášky a ukázky první předlékařské pomoci." />
+
     <title><%= content_for?(:title) ? yield(:title) : "VZS" %></title>
     <%= csrf_meta_tags %>
 
