pokus o spravne zkompilovani photos javascriptu

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -23,5 +23,5 @@
 </div>
 
 <% content_for :javascripts do %>
-  <%= javascript_include_tag 'photos' %>
+  <%= javascript_include_tag 'photos_manifest' %>
 <% end %>
