oprava odkazu na cez

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
                  <%= render 'layouts/treninky' %>
 
 
-               <%= link_to 'www.cez.cz' do %>
+               <%= link_to 'http://www.cez.cz' do %>
                 <%= image_tag("logo-skupina-cez.jpg", :class => "img") %>
               <% end %>
                 
