Zobrazovani verze ve footeru

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,7 @@
 
       <hr />
       <footer>
-      <p>&copy; FriendlySystems.cz 2012</p>
+      <p>&copy; FriendlySystems.cz 2012, verze <a class="#" class="tooltip" title="<%= REVISION%>"><%= CURRENT_VERSION%></a></p>
       </footer>
     </div> <!-- /container -->
 
