Oprava anglickych popisku na strance zobrazeni uzivatele
[Fixes #35396529]

--- a/app/views/addresses/_address.html.erb
+++ b/app/views/addresses/_address.html.erb
@@ -1,16 +1,16 @@
 <tr>
-  <th><%=t 'user.attr.street' %></th>
+  <th><%= Address.human_attribute_name :street %></th>
   <td><%= address.street %></td>
 </tr>
 <tr>
-  <th><%=t 'user.attr.housenumber' %></th>
+  <th><%= Address.human_attribute_name :housenumber %></th>
   <td><%= address.house_number %></td>
 </tr>
 <tr>
-  <th><%=t 'user.attr.city' %></th>
+  <th><%= Address.human_attribute_name :city %></th>
   <td><%= address.city %></td>
 </tr>
 <tr>
-  <th><%=t 'user.attr.postcode' %></th>
+  <th><%= Address.human_attribute_name :postcode %></th>
   <td><%= address.postcode %></td>
 </tr>
