Pri volani helperu title se vrati h1 tag
[Fixes #36083593] - Pri zobrazeni fotogalerie neni zobrazeno jeji jmeno
Zaroven se tim pri zobrazeni clanku v metatagu title zobrazi nazev
stranky. Google likes!

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,4 +1,4 @@
-<% title @gallery.name%>
+<%= title @gallery.name%>
 <% context_menu do %>
   <%= link_back galleries_path, 'Seznam fotogalerií' %>
   <% if can? :edit, @gallery%>
