--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,3 @@
-<% title @page.title %>
 <% context_menu do %>
   <% if can? :manage, Page %>
     <%= link_back pages_path, 'Seznam stránek' %>
@@ -10,7 +9,7 @@
 <div class="row-fluid vzs-page">
 
   <div class="row-fluid vzs-page-content">
-    <h1><%= yield :title %> </h1>
+    <%= title @page.title %>
     <%= raw @page.content %>
   </div>
 
