Zobrazeni fotogalerie v mrizce

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,18 +1,15 @@
-<li>
-<div class="thumbnail vzs-gallery-photo">
-  <a href="<%= photo.image.url %>", target="_blank"><%= image_tag photo.image.url(:small) %></a>
-  <h5><%= photo.name %></h5>
-  <% if can? :delete, photo %>
-    <%= link_to gallery_photo_path(photo.gallery, photo), :confirm => 'Opravdu odstranit fotku?', :method => :delete, :class => "btn btn-danger btn-mini" do %>
-      <i class="icon-trash"></i> 
-    <% end %>
-  <% end %>
-  <% if can? :update, photo %>
-    <%= link_to edit_gallery_photo_path(photo.gallery, photo), :class => "btn btn-mini vzs-gallery-photo-edit" do %>
-      <i class="icon-edit"></i> 
-    <% end %>
-    <%= render 'photos/form', :photo => photo, :existing => true %>
-  <% end %>
-</div>
-</li>
+<% if photo_counter % 4 == 0 %>
+  <div class="row">
+<% end %>
+  <div class="span3">
+    <a href="<%= photo.image.url(:large) %>" rel="lightbox[]" target="_blank">
+      <%= image_tag photo.image.url(:small) %>
+    </a>
+    <h5><%= photo.name %></h5>
+  </div>
+<% if photo_counter % 4 == 3 %>
+  </div>
+  <br />
+<% end %>
+
 
