--- a/app/views/galleries/_show_photos.html.erb
+++ b/app/views/galleries/_show_photos.html.erb
@@ -1,8 +1,11 @@
 
 <div class="row-fluid vzs-gallery-content">
-  <ul class="thumbnails">
+  <div class="span12">
     <%= render @gallery.photos %>
-  </ul>
+    <% unless @gallery.photos.count % 4 == 3 %>
+      </div>
+    <% end %>
+  </div>
 </div>
 <% if can? :create, @photo %>
   <div class="row-fluid" id="vzs-new-photo">
