--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -6,6 +6,7 @@
       <%= f.input :user %>
       <%= f.input :article, :as => :select, :include_blank => true %>
       <%= f.input :group, :as => :select, :collection => group_names, :include_blank => false %>
+      <%= f.file_field 'gallery_photos_image', :multiple => "multiple", :name => "gallery[photos_attributes][][image]" %>
     <% end %>
     <%= f.actions do %>
       <%= f.action :submit, :as => :button, :button_html => { :class => 'btn btn-success' } %>
