Osetreni pripadu kdy clanek nema galerii

--- a/app/views/shared/_hero.html.erb
+++ b/app/views/shared/_hero.html.erb
@@ -1,7 +1,7 @@
 <% if article %>
 <h1><%=link_to article.title, article %></h1>
   <p>
-    <% unless article.gallery.photos.many? %>
+    <% unless article.gallery.try(:photos).try(:many?) %>
       <%= link_to article do %>
         <%= image_tag article.gallery.photos.first.image.url(:thumbnail), :class => "float right" %>
       <% end %>
@@ -10,7 +10,7 @@
     <br />
     <a href="<%= article_path(article) %>" class="btn btn-primary btn-medium">Více <i class="icon-chevron-right"></i></a>
   </p>
-    <% if article.gallery.photos.many? %>
+    <% if article.gallery.try(:photos).try(:many?) %>
       <p>
         <%= render article.gallery %>
       </p>
