--- a/app/views/shared/_hero.html.erb
+++ b/app/views/shared/_hero.html.erb
@@ -1,7 +1,7 @@
 <% if article %>
 <h1><%=link_to article.title, article %></h1>
   <p>
-    <% unless article.gallery.try(:photos).try(:many?) %>
+    <% unless article.gallery.nil? or article.gallery.try(:photos).try(:many?) %>
       <%= link_to article do %>
         <%= image_tag article.gallery.photos.first.image.url(:thumbnail), :class => "float right" %>
       <% end %>
