Pridani zpravodaje skupiny CEZ
[Finishes #36328309] Pod znak CEZu pridat odkaz na jejich casopis

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,11 @@
 
 
                <%= link_to 'http://www.cez.cz' do %>
-                <%= image_tag("logo-skupina-cez.jpg", :class => "img") %>
+                <%= image_tag("logo-skupina-cez.jpg", :class => "banner") %>
+              <% end %>
+
+              <%= link_to 'http://www.zpravodajedu.cz' do %>
+                <%= image_tag("dukovany_160x160_v02.gif", :class => "banner") %>
               <% end %>
                 
               </div><!--/.well -->
