--- a/app/views/layouts/_google_analytics.html.erb
+++ b/app/views/layouts/_google_analytics.html.erb
@@ -3,13 +3,14 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-34855321-1']);
+  _gaq.push(['_setDomainName', 'trebic.vzs.cz']);
   _gaq.push(['_trackPageview']);
 
   (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+   var ga = document.createElement('script')&nbsp;ga.type = 'text/javascript'&nbsp;ga.async = true;
+   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+   var s = document.getElementsByTagName('script')[0]&nbsp;s.parentNode.insertBefore(ga, s);
+   })();
 
 </script>
 <% end %>
