--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -1,14 +1,6 @@
 <tr>
-  <td><%= profile.user.full_name %></td>
+  <td><%= link_to profile.user.full_name, profile.user%></td>
   <td><%= profile.email %></td>
   <td><%= profile.user_age%></td>
   <td><%= profile.telephone %></td>
-  <td>
-    <div class="btn-group">
-      <%= link_to profile.user, :class => "btn" do %>
-        <i class="icon-search"></i> Zobrazit
-      <% end %>
-      <%= render 'users/change_buttons', :user => profile.user %>
-    </div>
-  </td>
 </tr>
