--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,10 @@
-<% title "Články" %>
+<%= title "Články" %>
 
 <% context_menu do %>
   <% if can? :create, Article %>
     <%= link_new new_article_path, 'Nový článek' %>
   <% end %>
-<% end %>
+   <% end %>
 
 <% @articles.in_groups_of(2) do |group| %>
   <div class="row">
